# authentication_gRPC

./: .env  .env.development  .env.test  .gitignore  Cargo.toml  Dockerfile  README.md  authentication.rs  build.rs  docker-compose.yml
migrations/: 20230404122117_user.sql  20230406141535_users.sql  20230417125939_users.sql  20230418205613_userscode.sql  20230418210949_users_code.sql  20230418212134_change_user_updateAt.sql  20230420154959_rename_col_from_users_code.sql
proto/: authentication.proto
src/: lib.rs  server.rs
src/controller/: user_controller.rs
src/controllers/: authentication_controller.rs  default_controllers.rs  mod.rs  user_controller.rs
src/controllers/authentication/: authentication_controller.rs
src/controllers/user/: mod.rs  user_controller.rs  user_controller_test.rs
src/database/: connection.rs
src/database/utils/: integration_test.rs  mod.rs
src/dtos/: mod.rs
src/dtos/controllers/: dtos_controller_user.rs  mod.rs
src/dtos/models/: dtos_model_user.rs  mod.rs
src/dtos/repositories/: dtos_repository_user.rs  mod.rs
src/dtos/views/: dtos_view_user.rs  mod.rs
src/error/: mod.rs
src/error_handling/: error_handling_rpc.rs  mod.rs
src/models/: authentication_model.rs  default_models.rs  mod.rs  user_model.rs
src/models/authentication/: authentication_model.rs
src/models/user/: mod.rs  user_model.rs  user_model_mock.rs  (+1 more)
src/repositories/: mod.rs  user_repository.rs  users_code_repository.rs
src/rpc/: authentication.rs
src/security/: jwt.rs
src/services/: mod.rs
src/utils/: mod.rs
src/views/: mod.rs  user_view.rs
tests/: main.rs
tests/mocks/: mod.rs  sanitizer_user_input_mock.rs  user_model_mock.rs  user_repository_mock.rs  users_code_repository_mock.rs
tests/models/: mod.rs  user_model_mock.rs
tests/repositories/: mod.rs  user_repository_mock.rs
tests/utils/: builders.rs  mod.rs
(+62 files in other folders)
